--- a/package.json
+++ b/package.json
@@ -3,27 +3,38 @@
   "version": "0.0.0",
   "description": "React Navigation View",
   "main": "lib/ReactNavigationView.js",
-  "author": "Collin Brewer",
-  "homepage": "https://github.com/collinbrewer/@collinbrewer/react-navigation-view",
+  "author": "Collin Brewer <collin@brewer-collective.com>",
+  "homepage": "https://github.com/collinbrewer/react-navigation-view",
   "repository": {
     "type": "git",
-    "url": "https://github.com/collinbrewer/@collinbrewer/react-navigation-view.git"
+    "url": "https://github.com/collinbrewer/react-navigation-view.git"
   },
   "bugs": {
-    "url": "https://github.com/collinbrewer/@collinbrewer/react-navigation-view/issues"
+    "url": "https://github.com/collinbrewer/react-navigation-view/issues"
   },
   "dependencies": {
     "classnames": "^2.1.2"
   },
   "devDependencies": {
+    "babel-cli": "^6.11.4",
+    "babel-core": "^6.13.2",
     "babel-eslint": "^4.1.3",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-istanbul": "^2.0.0",
+    "babel-polyfill": "^6.13.0",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
+    "enzyme": "^2.4.1",
     "eslint": "^1.10.3",
     "eslint-config-happiness": "^5.3.1",
+    "eslint-loader": "^1.5.0",
     "eslint-plugin-promise": "^2.0.1",
     "eslint-plugin-react": "^3.5.1",
     "eslint-plugin-standard": "^2.0.0",
     "gulp": "^3.9.0",
+    "isparta-instrumenter-loader": "^1.0.1",
     "jasmine-core": "^2.4.1",
     "karma": "^1.2.0",
     "karma-babel-preprocessor": "^6.0.1",
@@ -36,12 +47,17 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.8.0",
     "mocha": "^3.0.2",
+    "open": "0.0.5",
     "phantomjs-prebuilt": "^2.1.12",
     "react": "^0.14.0",
+    "react-addons-test-utils": "^15.3.0",
     "react-component-gulp-tasks": "^0.7.6",
     "react-dom": "^0.14.0",
+    "react-hot-loader": "^1.3.0",
+    "react-motion": "^0.4.4",
     "sinon": "^1.17.5",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   },
   "peerDependencies": {
     "react": "^0.14.0"
@@ -55,7 +71,9 @@
     "lint": "eslint ./; true",
     "publish:site": "NODE_ENV=production gulp publish:examples",
     "release": "NODE_ENV=production gulp release",
-    "start": "gulp dev",
+    "serve": "node server.js --env=dev",
+    "serve:dist": "node server.js --env=dist",
+    "start": "node server.js --env=dev",
     "test": "karma start --single-run",
     "test:watch": "karma start"
   },
