--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "url": "https://github.com/collinbrewer/react-navigation-view/issues"
   },
   "dependencies": {
-    "classnames": "^2.1.2"
+    "classnames": "^2.1.2",
+    "react-measure": "^0.5.0"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
     "babel-core": "^6.13.2",
-    "babel-eslint": "^4.1.3",
+    "babel-eslint": "^4.1.8",
     "babel-loader": "^6.2.4",
     "babel-plugin-istanbul": "^2.0.0",
     "babel-polyfill": "^6.13.0",
@@ -31,7 +32,7 @@
     "eslint-config-happiness": "^5.3.1",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-promise": "^2.0.1",
-    "eslint-plugin-react": "^3.5.1",
+    "eslint-plugin-react": "^3.16.1",
     "eslint-plugin-standard": "^2.0.0",
     "gulp": "^3.9.0",
     "isparta-instrumenter-loader": "^1.0.1",
