Configured transpiled output

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "React Navigation View",
   "main": "lib/ReactNavigationView.js",
   "author": "Collin Brewer <collin@brewer-collective.com>",
+  "license": "ISC",
   "homepage": "https://github.com/collinbrewer/react-navigation-view",
   "repository": {
     "type": "git",
@@ -27,15 +28,15 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
+    "copyfiles": "^1.0.0",
     "enzyme": "^2.4.1",
-    "eslint": "^1.10.3",
+    "eslint": "^3.3.0",
     "eslint-config-happiness": "^5.3.1",
+    "eslint-config-standard": "^5.3.5",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-promise": "^2.0.1",
     "eslint-plugin-react": "^3.16.1",
-    "eslint-plugin-standard": "^2.0.0",
     "gulp": "^3.9.0",
-    "isparta-instrumenter-loader": "^1.0.1",
     "jasmine-core": "^2.4.1",
     "karma": "^1.2.0",
     "karma-babel-preprocessor": "^6.0.1",
@@ -48,6 +49,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.8.0",
     "mocha": "^3.0.2",
+    "null-loader": "^0.1.1",
     "open": "0.0.5",
     "phantomjs-prebuilt": "^2.1.12",
     "react": "^0.14.0",
@@ -63,18 +65,19 @@
   "peerDependencies": {
     "react": "^0.14.0"
   },
-  "browserify-shim": {
-    "react": "global:React"
-  },
   "scripts": {
-    "build": "gulp clean && NODE_ENV=production gulp build",
+    "clean": "rimraf lib/*",
+    "copy": "copyfiles -f ./src/styles/react-navigation-view.css ./lib",
+    "build": "npm run copy & babel -d lib/ src/",
     "examples": "gulp dev:server",
-    "lint": "eslint ./; true",
+    "lint": "eslint ./src",
     "publish:site": "NODE_ENV=production gulp publish:examples",
-    "release": "NODE_ENV=production gulp release",
+    "release:major": "npm version major && npm publish && git push --follow-tags",
+    "release:minor": "npm version minor && npm publish && git push --follow-tags",
+    "release:patch": "npm version patch && npm publish && git push --follow-tags",
     "serve": "node server.js --env=dev",
-    "serve:dist": "node server.js --env=dist",
-    "start": "node server.js --env=dev",
+    "serve:lib": "node server.js --env=lib",
+    "start": "npm run serve",
     "test": "karma start --single-run",
     "test:watch": "karma start"
   },
