--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "url": "https://github.com/collinbrewer/react-navigation-view/issues"
   },
   "dependencies": {
-    "classnames": "^2.1.2",
     "react-measure": "^0.5.0"
   },
   "devDependencies": {
@@ -30,12 +29,13 @@
     "chai": "^3.5.0",
     "copyfiles": "^1.0.0",
     "enzyme": "^2.4.1",
-    "eslint": "^3.3.0",
+    "eslint": "^2.13.1",
     "eslint-config-happiness": "^5.3.1",
     "eslint-config-standard": "^5.3.5",
     "eslint-loader": "^1.5.0",
-    "eslint-plugin-promise": "^2.0.1",
+    "eslint-plugin-promise": "^1.3.2",
     "eslint-plugin-react": "^3.16.1",
+    "eslint-plugin-standard": "^1.3.3",
     "gulp": "^3.9.0",
     "jasmine-core": "^2.4.1",
     "karma": "^1.2.0",
@@ -52,10 +52,10 @@
     "null-loader": "^0.1.1",
     "open": "0.0.5",
     "phantomjs-prebuilt": "^2.1.12",
-    "react": "^0.14.0",
+    "react": "^15.3.0",
     "react-addons-test-utils": "^15.3.0",
     "react-component-gulp-tasks": "^0.7.6",
-    "react-dom": "^0.14.0",
+    "react-dom": "^15.3.0",
     "react-hot-loader": "^1.3.0",
     "react-motion": "^0.4.4",
     "sinon": "^1.17.5",
@@ -63,12 +63,14 @@
     "webpack-dev-server": "^1.14.1"
   },
   "peerDependencies": {
-    "react": "^0.14.0"
+    "react": ">= 0.14.0"
   },
   "scripts": {
-    "clean": "rimraf lib/*",
+    "clean": "rimraf lib",
     "copy": "copyfiles -f ./src/styles/react-navigation-view.css ./lib",
-    "build": "npm run copy & babel -d lib/ src/",
+    "build_old": "npm run copy & babel --source-map inline -d lib/ src/",
+    "build": "webpack --env=lib",
+    "build:watch": "webpack --watch --env=lib",
     "examples": "gulp dev:server",
     "lint": "eslint ./src",
     "publish:site": "NODE_ENV=production gulp publish:examples",
