Fixed sizing issue when dimensions are not explicitly set

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "clean": "rimraf lib",
     "copy": "copyfiles -f ./src/styles/react-navigation-view.css ./lib",
     "build_old": "npm run copy & babel --source-map inline -d lib/ src/",
+    "prebuild": "npm run clean",
     "build": "npm run copy & webpack --env=lib",
     "build:watch": "webpack --watch --env=lib",
     "examples": "gulp dev:server",
