add build to release script

--- a/package.json
+++ b/package.json
@@ -75,9 +75,9 @@
     "examples": "gulp dev:server",
     "lint": "eslint ./src",
     "publish:site": "NODE_ENV=production gulp publish:examples",
-    "release:major": "npm version major && npm publish && git push --follow-tags",
-    "release:minor": "npm version minor && npm publish && git push --follow-tags",
-    "release:patch": "npm version patch && npm publish && git push --follow-tags",
+    "release:major": "npm run build && npm version major && npm publish && git push --follow-tags",
+    "release:minor": "npm run build && npm version minor && npm publish && git push --follow-tags",
+    "release:patch": "npm run build && npm version patch && npm publish && git push --follow-tags",
     "serve": "node server.js --env=dev",
     "serve:lib": "node server.js --env=lib",
     "start": "npm run serve",
