--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "url": "https://github.com/collinbrewer/react-navigation-view/issues"
   },
   "dependencies": {
-    "react-measure": "^0.5.0"
+    "prop-types": "^15.6.2",
+    "react-measure": "^2.2.3"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
@@ -52,12 +53,12 @@
     "null-loader": "^0.1.1",
     "open": "0.0.5",
     "phantomjs-prebuilt": "^2.1.12",
-    "react": "^15.3.0",
+    "react": "^16.7.0",
     "react-addons-test-utils": "^15.3.0",
     "react-component-gulp-tasks": "^0.7.6",
-    "react-dom": "^15.3.0",
-    "react-hot-loader": "^1.3.0",
-    "react-motion": "^0.4.4",
+    "react-dom": "^16.7.0",
+    "react-hot-loader": "^4.6.5",
+    "react-motion": "^0.5.2",
     "sinon": "^1.17.5",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
