--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
     "copyfiles": "^1.0.0",
-    "enzyme": "^2.4.1",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.8.0",
     "eslint": "^2.13.1",
     "eslint-config-happiness": "^5.3.1",
     "eslint-config-standard": "^5.3.5",
@@ -54,7 +55,6 @@
     "open": "0.0.5",
     "phantomjs-prebuilt": "^2.1.12",
     "react": "^16.7.0",
-    "react-addons-test-utils": "^15.3.0",
     "react-component-gulp-tasks": "^0.7.6",
     "react-dom": "^16.7.0",
     "react-hot-loader": "^4.6.5",
